--- a/windows/ns-3-dev/InstallHeaders/InstallHeaders.vcxproj
+++ b/windows/ns-3-dev/InstallHeaders/InstallHeaders.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FCAE684C-D6B0-4D31-8836-1D0875A98D65}</ProjectGuid>
     <RootNamespace>InstallHeaders</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
