--- a/windows/ns-3-dev/applications/applications.vcxproj
+++ b/windows/ns-3-dev/applications/applications.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0595E80B-3D2F-4737-AF51-8B912670B7CD}</ProjectGuid>
     <RootNamespace>applications</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
