--- a/windows/ns-3-dev/config-store/config-store.vcxproj
+++ b/windows/ns-3-dev/config-store/config-store.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{553B0CFA-776A-4007-B398-2C0165C98AE9}</ProjectGuid>
     <RootNamespace>configstore</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
