--- a/windows/ns-3-dev/core/core.vcxproj
+++ b/windows/ns-3-dev/core/core.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B7820E24-D8E4-463F-BF3E-204B9D8114B4}</ProjectGuid>
     <RootNamespace>core</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
