--- a/windows/ns-3-dev/dsr/dsr.vcxproj
+++ b/windows/ns-3-dev/dsr/dsr.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EB0A5E32-948D-452A-A581-19F04BCA1AAC}</ProjectGuid>
     <RootNamespace>dsr</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
