--- a/windows/ns-3-dev/flow-monitor/flow-monitor.vcxproj
+++ b/windows/ns-3-dev/flow-monitor/flow-monitor.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F62F7983-4264-4733-9491-7257F8505418}</ProjectGuid>
     <RootNamespace>flowmonitor</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
