--- a/windows/ns-3-dev/internet/internet.vcxproj
+++ b/windows/ns-3-dev/internet/internet.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BA2FF464-532A-441A-ADF6-2E6E0840E75E}</ProjectGuid>
     <RootNamespace>internet</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
