--- a/windows/ns-3-dev/lte/lte.vcxproj
+++ b/windows/ns-3-dev/lte/lte.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{205A52BB-E7B8-4328-AAF2-7F88D4546FDA}</ProjectGuid>
     <RootNamespace>lte</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
