--- a/windows/ns-3-dev/mesh/mesh.vcxproj
+++ b/windows/ns-3-dev/mesh/mesh.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8B381BEA-93FD-4076-ACF9-D1B18C6A2F7F}</ProjectGuid>
     <RootNamespace>mesh</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
