--- a/windows/ns-3-dev/mobility/mobility.vcxproj
+++ b/windows/ns-3-dev/mobility/mobility.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9D0CCBA8-1101-4147-B9EF-601EBFD74B85}</ProjectGuid>
     <RootNamespace>mobility</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
