--- a/windows/ns-3-dev/mpi/mpi.vcxproj
+++ b/windows/ns-3-dev/mpi/mpi.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FE1A1789-88A3-4177-A3B5-C574DFAFE215}</ProjectGuid>
     <RootNamespace>mpi</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
