--- a/windows/ns-3-dev/network/network.vcxproj
+++ b/windows/ns-3-dev/network/network.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{23A7B35C-D931-486C-A9D9-B1918EDC9031}</ProjectGuid>
     <RootNamespace>network</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
