--- a/windows/ns-3-dev/nix-vector-routing/nix-vector-routing.vcxproj
+++ b/windows/ns-3-dev/nix-vector-routing/nix-vector-routing.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{62D77ADF-2806-4DAC-BF9B-A2629C8931D7}</ProjectGuid>
     <RootNamespace>nixvectorrouting</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
