--- a/windows/ns-3-dev/olsr/olsr.vcxproj
+++ b/windows/ns-3-dev/olsr/olsr.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{83DAD76D-3B1C-484E-BF47-548C523A0409}</ProjectGuid>
     <RootNamespace>olsr</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
