--- a/windows/ns-3-dev/point-to-point-layout/point-to-point-layout.vcxproj
+++ b/windows/ns-3-dev/point-to-point-layout/point-to-point-layout.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8C800E32-0FC4-48DA-849C-411FA60F1A4F}</ProjectGuid>
     <RootNamespace>pointtopointlayout</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
