--- a/windows/ns-3-dev/virtual-net-device/virtual-net-device.vcxproj
+++ b/windows/ns-3-dev/virtual-net-device/virtual-net-device.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4798A866-2BAC-4462-A140-51EF75A3E6CA}</ProjectGuid>
     <RootNamespace>virtualnetdevice</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
