--- a/windows/ns-3-dev/wimax/wimax.vcxproj
+++ b/windows/ns-3-dev/wimax/wimax.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{823C041E-23A4-4820-9C81-EF13E438F962}</ProjectGuid>
     <RootNamespace>wimax</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
