--- a/windows/ns-3-dev/winport/winport.vcxproj
+++ b/windows/ns-3-dev/winport/winport.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C4647903-FB2A-4961-840F-CB90E54062A9}</ProjectGuid>
     <RootNamespace>winport</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
