--- a/windows/ns-3-dev/antenna/antenna.vcxproj
+++ b/windows/ns-3-dev/antenna/antenna.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{812DBF97-BFB6-46F1-ABB1-DEBE81D75DEA}</ProjectGuid>
     <RootNamespace>antenna</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
