--- a/windows/ns-3-dev/aodv/aodv.vcxproj
+++ b/windows/ns-3-dev/aodv/aodv.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2257CCC8-E4A0-4464-A84C-D989328DC869}</ProjectGuid>
     <RootNamespace>aodv</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
