--- a/windows/ns-3-dev/bridge/bridge.vcxproj
+++ b/windows/ns-3-dev/bridge/bridge.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{633F111F-FFD3-40D5-A463-9E713235CF4B}</ProjectGuid>
     <RootNamespace>bridge</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
