--- a/windows/ns-3-dev/buildings/buildings.vcxproj
+++ b/windows/ns-3-dev/buildings/buildings.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC81AF8F-057F-4E7A-9640-F7CEEDD1B273}</ProjectGuid>
     <RootNamespace>buildings</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
