--- a/windows/ns-3-dev/csma-layout/csma-layout.vcxproj
+++ b/windows/ns-3-dev/csma-layout/csma-layout.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E7ED077F-3D0F-4AAD-8599-9DC3AADAE69C}</ProjectGuid>
     <RootNamespace>csmalayout</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
