--- a/windows/ns-3-dev/csma/csma.vcxproj
+++ b/windows/ns-3-dev/csma/csma.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3F443112-28F5-4454-830C-55D8A49CDCB9}</ProjectGuid>
     <RootNamespace>csma</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
