--- a/windows/ns-3-dev/energy/energy.vcxproj
+++ b/windows/ns-3-dev/energy/energy.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F2C240AC-B376-4E0B-9EDD-BB50F2BBE75B}</ProjectGuid>
     <RootNamespace>energy</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
