--- a/windows/ns-3-dev/main/main.vcxproj
+++ b/windows/ns-3-dev/main/main.vcxproj
@@ -24,6 +24,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E295EBA9-1ACD-4583-B9C8-16C7FDD1E35A}</ProjectGuid>
     <RootNamespace>main</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
