--- a/windows/ns-3-dev/netanim/netanim.vcxproj
+++ b/windows/ns-3-dev/netanim/netanim.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CB1BA1D7-4286-483F-AF16-A252B3FA07BF}</ProjectGuid>
     <RootNamespace>netanim</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
