--- a/windows/ns-3-dev/point-to-point/point-to-point.vcxproj
+++ b/windows/ns-3-dev/point-to-point/point-to-point.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9D9615EC-115E-4F9E-8F8A-E2EF65437C79}</ProjectGuid>
     <RootNamespace>pointtopoint</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
