--- a/windows/ns-3-dev/propagation/propagation.vcxproj
+++ b/windows/ns-3-dev/propagation/propagation.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C8915474-78C1-4E0C-A421-7AC5177134E0}</ProjectGuid>
     <RootNamespace>propagation</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
