--- a/windows/ns-3-dev/spectrum/spectrum.vcxproj
+++ b/windows/ns-3-dev/spectrum/spectrum.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5331D87C-C3B9-40FC-9EE6-AC406C380872}</ProjectGuid>
     <RootNamespace>spectrum</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
