--- a/windows/ns-3-dev/stats/stats.vcxproj
+++ b/windows/ns-3-dev/stats/stats.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FD442B86-0972-4434-9139-B9920A5E4185}</ProjectGuid>
     <RootNamespace>stats</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
