--- a/windows/ns-3-dev/uan/uan.vcxproj
+++ b/windows/ns-3-dev/uan/uan.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F2573FC7-1CCD-4341-A75E-88A4A07765BE}</ProjectGuid>
     <RootNamespace>uan</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
