--- a/windows/ns-3-dev/wifi/wifi.vcxproj
+++ b/windows/ns-3-dev/wifi/wifi.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{38C26040-424B-4526-B0C6-4089A04EABE2}</ProjectGuid>
     <RootNamespace>wifi</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
